Prevent "pull to refresh" on mobile browser (apply overscroll-behavior: none on the HTML element)

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
 html {
   position: relative;
   height: 100dvh;
+  overscroll-behavior: none;
 }
 
 body {
